[package]
name = "bevy_sfz"
version = "0.1.0"
edition = "2024"
keywords = ["bevy"]
license = "MIT OR Apache-2.0"

[dependencies]
bevy = { version = "0.17", default-features = false, features = [
    "bevy_audio",
    "bevy_asset",
    "bevy_log"
] }
sofiza = "0.3"
thiserror = "2.0"

[dev-dependencies]
fastrand = "2.3"
bevy = { version = "0.17", default-features = false, features = [
    "vorbis"
] }
